--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,5 @@
 name: sudosharma
 channels:
-  - pytorch
   - defaults
 dependencies:
   - _tflow_select=2.1.0=gpu
@@ -12,9 +11,9 @@ dependencies:
   - ca-certificates=2018.03.07=0
   - certifi=2018.10.15=py36_0
   - cffi=1.11.5=py36he75722e_1
-  - cudatoolkit=9.2=0
-  - cudnn=7.2.1=cuda9.2_0
-  - cupti=9.2.148=0
+  - cudatoolkit=9.0=h13b8566_0
+  - cudnn=7.1.2=cuda9.0_0
+  - cupti=9.0.176=0
   - dbus=1.13.2=h714fa37_1
   - decorator=4.3.0=py36_0
   - entrypoints=0.2.3=py36_2
@@ -65,11 +64,12 @@ dependencies:
   - mkl_random=1.0.1=py36h4414c95_1
   - nbconvert=5.3.1=py36_0
   - nbformat=4.4.0=py36_0
+  - nccl=1.3.5=cuda9.0_0
   - ncurses=6.1=hf484d3e_0
   - ninja=1.8.2=py36h6bb024c_1
   - notebook=5.7.0=py36_0
-  - numpy=1.15.2=py36h1d66e8a_1
-  - numpy-base=1.15.2=py36h81de0dd_1
+  - numpy=1.15.3=py36h1d66e8a_0
+  - numpy-base=1.15.3=py36h81de0dd_0
   - olefile=0.46=py36_0
   - openssl=1.0.2p=h14c3975_0
   - pandoc=2.2.3.2=0
@@ -90,6 +90,7 @@ dependencies:
   - pyqt=5.9.2=py36h05f1152_2
   - python=3.6.6=h6e4f718_2
   - python-dateutil=2.7.3=py36_0
+  - pytorch=0.4.1=py36ha74772b_0
   - pyzmq=17.1.2=py36h14c3975_0
   - qt=5.9.6=h8703b6f_2
   - qtconsole=4.4.2=py36_0
@@ -102,25 +103,24 @@ dependencies:
   - six=1.11.0=py36_1
   - sqlite=3.25.2=h7b6447c_0
   - tensorboard=1.11.0=py36hf484d3e_0
-  - tensorflow=1.11.0=gpu_py36h9c9050a_0
-  - tensorflow-base=1.11.0=gpu_py36had579c0_0
+  - tensorflow=1.11.0=gpu_py36h4459f94_0
+  - tensorflow-base=1.11.0=gpu_py36h8e0ae2d_0
   - tensorflow-gpu=1.11.0=h0d30ee6_0
   - termcolor=1.1.0=py36_1
   - terminado=0.8.1=py36_1
   - testpath=0.4.2=py36_0
   - tk=8.6.8=hbc83047_0
+  - torchvision=0.2.1=py36_0
   - tornado=5.1.1=py36h7b6447c_0
   - traitlets=4.3.2=py36_0
   - wcwidth=0.1.7=py36_0
   - webencodings=0.5.1=py36_1
   - werkzeug=0.14.1=py36_0
-  - wheel=0.32.1=py36_0
+  - wheel=0.32.2=py36_0
   - widgetsnbextension=3.4.2=py36_0
   - xz=5.2.4=h14c3975_4
   - zeromq=4.2.5=hf484d3e_1
   - zlib=1.2.11=ha838bed_2
-  - pytorch=0.4.1=py36_py35_py27__9.0.176_7.1.2_2
-  - torchvision=0.2.1=py36_1
   - pip:
     - astroid==2.0.4
     - autopep8==1.4.1
@@ -148,7 +148,7 @@ dependencies:
     - tensorboardx==1.4
     - thinc==6.12.0
     - toolz==0.9.0
-    - torch==0.4.1.post2
+    - torch==0.4.1
     - torchtext==0.3.1
     - tqdm==4.27.0
     - typed-ast==1.1.0
