--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
-  - conda create -q -n test-environment -f=environment_cpu.yml 
-  - source activate test-environment
+  - conda create -q --file=environment_cpu.yml 
+  - source activate sudosharma 
 
 script:
   - python train.py -t 
