--- a/environment_cpu.yml
+++ b/environment_cpu.yml
@@ -1,28 +1,28 @@
 name: sudosharma
 channels:
-  - pytorch
   - conda-forge
+  - pytorch
   - defaults
 dependencies:
   - aniso8601=4.0.1=py_0
-  - ca-certificates=2018.10.15=ha4d7672_0
-  - certifi=2018.10.15=py37_1000
   - click=7.0=py_0
   - flask=1.0.2=py_2
   - flask-restful=0.3.6=py_1
   - itsdangerous=1.1.0=py_0
-  - openssl=1.0.2p=h470a237_1
   - pycrypto=2.6.1=py37h470a237_2
   - werkzeug=0.14.1=py_0
   - appdirs=1.4.3=py37h28b3542_0
   - asn1crypto=0.24.0=py37_0
   - astroid=2.0.4=py37_0
+  - atomicwrites=1.2.1=py37_0
   - attrs=18.2.0=py37h28b3542_0
   - automat=0.7.0=py37_0
   - autopep8=1.4=py37_0
   - backcall=0.1.0=py37_0
   - blas=1.0=mkl
   - bleach=3.0.2=py37_0
+  - ca-certificates=2018.03.07=0
+  - certifi=2018.10.15=py37_0
   - cffi=1.11.5=py37he75722e_1
   - chardet=3.0.4=py37_1
   - constantly=15.1.0=py37h28b3542_0
@@ -43,6 +43,7 @@ dependencies:
   - gmp=6.1.2=h6c8ec71_1
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
+  - gunicorn=19.9.0=py37_0
   - html5lib=1.0.1=py37_0
   - hyperlink=18.0.0=py37_0
   - icu=58.2=h9c2bf20_1
@@ -82,6 +83,7 @@ dependencies:
   - mkl=2019.0=118
   - mkl_fft=1.0.6=py37h7dd41cf_0
   - mkl_random=1.0.1=py37h4414c95_1
+  - more-itertools=4.3.0=py37_0
   - msgpack-numpy=0.4.3.2=py37_0
   - msgpack-python=0.5.6=py37h6bb024c_1
   - murmurhash=1.0.1=py37he6710b0_0
@@ -93,6 +95,7 @@ dependencies:
   - numpy=1.15.3=py37h1d66e8a_0
   - numpy-base=1.15.3=py37h81de0dd_0
   - olefile=0.46=py37_0
+  - openssl=1.0.2p=h14c3975_0
   - pandas=0.23.4=py37h04863e7_0
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py37_1
@@ -103,10 +106,12 @@ dependencies:
   - pillow=5.3.0=py37h34e0f95_0
   - pip=10.0.1=py37_0
   - plac=0.9.6=py37_0
+  - pluggy=0.8.0=py37_0
   - preshed=2.0.1=py37he6710b0_0
   - prometheus_client=0.4.2=py37_0
   - prompt_toolkit=2.0.6=py37_0
   - ptyprocess=0.6.0=py37_0
+  - py=1.7.0=py37_0
   - pyasn1=0.4.4=py37h28b3542_0
   - pyasn1-modules=0.2.2=py37_0
   - pycodestyle=2.4.0=py37_0
@@ -119,6 +124,7 @@ dependencies:
   - pyparsing=2.2.2=py37_0
   - pyqt=5.9.2=py37h05f1152_2
   - pysocks=1.6.8=py37_0
+  - pytest=3.9.1=py37_0
   - python=3.7.0=h6e4f718_3
   - python-dateutil=2.7.3=py37_0
   - pytz=2018.5=py37_0
