[add] download spacy manually to prevent issue with en model

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ install:
   - conda info -a
   - conda env create -n testenv python=3.6
   - source activate testenv
+  - python -m spacy download en
   - pip install -r requirements_cpu.txt
 
 script:
