--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ install:
   - conda info -a
   - conda create -n testenv python=3.6
   - source activate testenv
-  - python -m spacy download en
-  - pip install -r requirements_cpu.txt
+  - pip install -r requirements.txt
 
 script:
   - python train.py -t 
