--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ install:
   - conda info -a
   - conda create -n testenv python=3.6
   - source activate testenv
+  - conda install -c conda-forge spacy
+  - python -m spacy download en
   - pip install -r requirements.txt
 
 script:
