--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,11 @@ install:
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
-  - conda info -a
-  - conda create -n testenv python=3.6
+  - conda create -q -n testenv python=3.6
   - source activate testenv
-  - conda install -c conda-forge spacy
+  - conda install -q -c conda-forge spacy
   - python -m spacy download en
-  - pip install -r requirements.txt
+  - pip -q install -r requirements.txt
 
 script:
   - python train.py -t 
