--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 
 cache: 
     directories:
-        - /home/travis/build/SudoSharma/bimpm_implementation/.vector_cache
+        - ~/build/SudoSharma/bimpm_implementation/.vector_cache
         - /home/travis/.cache/pip
 
 branches:
