--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ Cython==0.29
 cytoolz==0.9.0.1
 decorator==4.3.0
 dill==0.2.8.2
+dj-database-url==0.5.0
+Django==2.1.2
+django-heroku==0.3.1
 en-core-web-sm==2.0.0
 flake8==3.5.0
 Flask==1.0.2
@@ -42,6 +45,7 @@ plac==0.9.6
 preshed==2.0.1
 prompt-toolkit==2.0.6
 protobuf==3.6.1
+psycopg2==2.7.5
 ptyprocess==0.6.0
 pycodestyle==2.3.1
 pycparser==2.19
@@ -69,5 +73,6 @@ ujson==1.35
 urllib3==1.23
 wcwidth==0.1.7
 Werkzeug==0.14.1
+whitenoise==4.1
 wrapt==1.10.11
 yapf==0.24.0
